# alpha-x

./: .gitignore  log_demo.py  pyproject.toml  r.txt  requirements.txt  test.db
alphax/: __init__.py
alphax/core/: __init__.py
alphax/core/database/: database_factory.py
alphax/core/decorator/: __init__.py  time_cost.py
alphax/core/logger/: __init__.py  alphax_log_uploader.py  alphax_logger.py  config.py  logger.py
alphax/core/utils/: __init__.py  file_util.py  local_dir_util.py  math_util.py  time_util.py
alphax/dataset/: __init__.py
alphax/dataset/candle/: __init__.py  candle_downloader.py  constants.py  okx_candle_downloader.py
alphax/dataset/orderbook/: okx_orderbook_listener.py
alphax/ml/: __init__.py  random_forest_regressor_tool.py
alphax_test/: test.ipynb
alphax_test/core/: test_core_init.py
alphax_test/core/database/: test_database_factory.py  test_sqlite_helper.py
alphax_test/core/db/: test_sqlite_helper.py  (+1 more)
k_line/notebooks/: clean_data.ipynb  feature_builder.ipynb  train.ipynb
ml_demo/titanic/: feature_builder.ipynb
order_book_ai/: clean_data.ipynb  clean_data.py  feature_builder.ipynb  target_builder.ipynb  train_predict.ipynb
order_book_ai/notebooks/: feature_builder.ipynb
order_book_ai/src/: data_cleaner.py  feature_builder.py  main.py  main_test.py  model_tainer.py  target_builder.py
strategy/: clean_data.ipynb  特征探索_macd斜率特征.ipynb
strategy/特征探索/: 特征探索_RSI特征.ipynb  特征探索_macd交易量特征.ipynb  特征探索_macd斜率特征.ipynb  特征探索_macd金叉特征.ipynb
titanic/: feature_builder.ipynb  titanic_predict.ipynb
trash/common/: k_line_downloader.py
(+24 files in other folders)
